crates/tui/tests/storybook/snapshots/app_transcript_group::read_file_tool_group_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* read_file ×2
  src/lib.rs
  src/main.rs









─ ✿ working… ───────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
