crates/tui/tests/storybook/snapshots/app_transcript_group::read_file_tool_group_states.expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* read_file src/lib.rs
  2 lines

* read_file src/main.rs
  3 lines







─ ✿ working… ───────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
