crates/tui/tests/storybook/snapshots/app_transcript_group::web_tool_group_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* web ×2                                                                         14:37:03
  web_search rust unicode width crate
  web_fetch https://docs.rs/unicode-width/latest/unicode_width/

















─ ✿ working… ─────────────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                         1:1 100%
