crates/tui/tests/storybook/snapshots/app_transcript_group::web_tool_group_states.expanded.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 90 24
  0   0   1 fg=AnsiValue(77)
  0   1  11 attrs=dim
  1   2  28 attrs=dim
  2   2  35 attrs=dim
  4   0   1 fg=AnsiValue(77)
  4   1  10 attrs=dim
 20   0   1 fg=AnsiValue(237)
 20   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 20   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 20   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 20   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 20   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 20   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 20   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 20   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 20   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 20  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 20  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 20  13  77 fg=AnsiValue(237)
 21   1   1 fg=Black bg=White
 22   0  90 fg=AnsiValue(237)
 23   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 23  10  72 bg=AnsiValue(233)
 23  82   8 fg=AnsiValue(244) bg=AnsiValue(233)
