crates/tui/tests/storybook/snapshots/app_transcript_view_state::assistant_text_block_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
I'll inspect the parser, update the call sites, and then run
the focused regression tests.








─ ✿ working… ───────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
